fix column overflow and add custom scrollbar

--- a/src/renderer/assets/css/main.css
+++ b/src/renderer/assets/css/main.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.max-h-65vh {
+  max-height: 65vh;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 12px;
+  height: 16px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #27272a;
+  box-shadow: inset 0 0 10px 0 #27272a;
+  border-left: solid 6px #27272a;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #3f3f46;
+  box-shadow: inset 0 0 10px 0 #3f3f46;
+  border-left: solid 6px #27272a;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #747980;
+}
